# operation_brain

./: .gitignore
backend/: .env  .env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/api/: user.py
backend/core/: config.py  deps.py  jwt.py  response.py  security.py
backend/core/settings/: app.py  db.py  env.py  rag.py
backend/rag/pasers/: base_parser.py  docx_parser.py  parser_factory.py
backend/rag/pipelines/: ingestion_pipeline.py
backend/rag/prompts/: excel_table_analyze.py
backend/repo/: user.py
backend/schemas/request/: users.py
backend/schemas/response/: base.py  users.py
backend/schemas/service/: parser.py  user.py  users.py
backend/service/: user.py
backend/session/: redis.py  session.py
backend/session/models/: __init__.py  knowledge.py  users.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: auth.ts  chat.ts  dashboard.ts  index.ts  knowledge.ts
frontend/src/api/mock/: chat.mock.ts  knowledge.mock.ts
frontend/src/components/layout/: AppSidebar.vue  AppTopbar.vue  SidebarNavItem.vue  UserMenu.vue
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  auth.ts  chat.ts  knowledge.ts
frontend/src/styles/: common.css
frontend/src/types/: chat.ts  common.ts  knowledge.ts  user.ts
frontend/src/utils/: fileIcon.ts  format.ts  request.ts
frontend/src/views/Chat/: Chat.vue
frontend/src/views/Dashboard/: Dashboard.vue
frontend/src/views/Login/: Login.vue
(+30 files in other folders)
